# `kglab` changelog

## 0.1.4

2020-12-??

  * added `pySHACL` example
  * resolved Google Colab errors with registration of `rdflib-jsonld` plugin
  * simplified example notebook naming


## 0.1.3

2020-12-04

  * resolved removal of `grave` dependencies
  * added arrows to `pyvis` example by making it a directed graph
  * kudos @dmoore247


## 0.1.2

2020-11-30

  * support for dependabot
  * added a logo
  * interactive visualizations in `pyvis` and `grave`
  * SPARQL query examples
  * running graph algorithms in `networkx`
  * Parquet files using `pyarrow`
  * examples of annotation that combine use of SPARQL, SKOS, etc.
  * added instructions for installing/running JupyterLab
  * examples of SRL inference using `pslpython`
  * demo use of vector embedding with `gensim`
  * examples of string similarity with `pylev`


## 0.1.1

2020-11-09

  * first distribution on PyPi


## 0.1.0

2020-10-25

  * initial check-in