@@ -73,10 +73,10 @@
      "output_type": "stream",
      "text": [
       "https://www.food.com/recipe/327593 http://www.w3.org/1999/02/22-rdf-syntax-ns#type http://purl.org/heals/food/Recipe\n",
-      "https://www.food.com/recipe/327593 http://purl.org/heals/food/hasIngredient http://purl.org/heals/ingredient/CowMilk\n",
-      "https://www.food.com/recipe/327593 http://purl.org/heals/food/hasCookTime 8\n",
       "https://www.food.com/recipe/327593 http://purl.org/heals/food/hasIngredient http://purl.org/heals/ingredient/ChickenEgg\n",
-      "https://www.food.com/recipe/327593 http://purl.org/heals/food/hasIngredient http://purl.org/heals/ingredient/WholeWheatFlour\n"
+      "https://www.food.com/recipe/327593 http://purl.org/heals/food/hasCookTime 8\n",
+      "https://www.food.com/recipe/327593 http://purl.org/heals/food/hasIngredient http://purl.org/heals/ingredient/WholeWheatFlour\n",
+      "https://www.food.com/recipe/327593 http://purl.org/heals/food/hasIngredient http://purl.org/heals/ingredient/CowMilk\n"
      ]
     }
    ],
@@ -124,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Overall, with the `kglab` library the KG serialization to either Turtle or JSON-LD format becomes much simpler:"
+    "Overall, with the `kglab` library the KG serialization to multiple formats (Turtle, XML, JSON-LD, etc.) becomes much simpler:"
    ]
   },
   {
@@ -142,6 +142,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "kg.save_ttl(\"tmp.xml\", format=\"xml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "kg.save_jsonld(\"tmp.jsonld\")"
    ]
   },
@@ -149,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Open these files `tmp.ttl` and `tmp.jsonld` to confirm their serialized contents."
+    "Try opening these files to confirm their serialized contents."
    ]
   },
   {
@@ -163,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -220,8 +229,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>tmp.xml</td>\n",
+       "      <td>667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>tmp.parquet</td>\n",
-       "      <td>3631</td>\n",
+       "      <td>3632</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -231,10 +245,11 @@
        "     file_path  file_size\n",
        "0   tmp.jsonld        779\n",
        "1      tmp.ttl        314\n",
-       "2  tmp.parquet       3631"
+       "2      tmp.xml        667\n",
+       "3  tmp.parquet       3632"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +258,7 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "file_paths = [\"tmp.jsonld\", \"tmp.ttl\", \"tmp.parquet\"]\n",
+    "file_paths = [\"tmp.jsonld\", \"tmp.ttl\", \"tmp.xml\", \"tmp.parquet\"]\n",
     "file_sizes = [os.path.getsize(file_path) for file_path in file_paths]\n",
     "\n",
     "df = pd.DataFrame({\"file_path\": file_paths, \"file_size\": file_sizes})\n",
