@@ -306,7 +306,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1203d5a10>"
+       "<IPython.lib.display.IFrame at 0x1040f7650>"
       ]
      },
      "execution_count": 5,
@@ -374,6 +374,10 @@
    "outputs": [],
    "source": [
     "t0 = time.time()\n",
+    "kg.save_ttl(\"tmp.xml\", format=\"xml\")\n",
+    "write_times.append(round((time.time() - t0) * 1000.0, 2))\n",
+    "\n",
+    "t0 = time.time()\n",
     "kg.save_jsonld(\"tmp.jsonld\")\n",
     "write_times.append(round((time.time() - t0) * 1000.0, 2))\n",
     "\n",
@@ -417,24 +421,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>tmp.jsonld</td>\n",
-       "      <td>115901</td>\n",
-       "      <td>207.23</td>\n",
-       "      <td>0.001788</td>\n",
+       "      <td>tmp.ttl</td>\n",
+       "      <td>58866</td>\n",
+       "      <td>209.93</td>\n",
+       "      <td>0.003566</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>tmp.ttl</td>\n",
-       "      <td>58866</td>\n",
-       "      <td>95.00</td>\n",
-       "      <td>0.001614</td>\n",
+       "      <td>tmp.xml</td>\n",
+       "      <td>165079</td>\n",
+       "      <td>58.90</td>\n",
+       "      <td>0.000357</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>tmp.jsonld</td>\n",
+       "      <td>115901</td>\n",
+       "      <td>73.11</td>\n",
+       "      <td>0.000631</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>tmp.parquet</td>\n",
-       "      <td>12034</td>\n",
-       "      <td>65.89</td>\n",
-       "      <td>0.005475</td>\n",
+       "      <td>12004</td>\n",
+       "      <td>56.10</td>\n",
+       "      <td>0.004673</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -442,9 +453,10 @@
       ],
       "text/plain": [
        "     file_path  file_size  write_time  ms_per_byte\n",
-       "0   tmp.jsonld     115901      207.23     0.001788\n",
-       "1      tmp.ttl      58866       95.00     0.001614\n",
-       "2  tmp.parquet      12034       65.89     0.005475"
+       "0      tmp.ttl      58866      209.93     0.003566\n",
+       "1      tmp.xml     165079       58.90     0.000357\n",
+       "2   tmp.jsonld     115901       73.11     0.000631\n",
+       "3  tmp.parquet      12004       56.10     0.004673"
       ]
      },
      "execution_count": 8,
@@ -456,7 +468,7 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "file_paths = [\"tmp.jsonld\", \"tmp.ttl\", \"tmp.parquet\"]\n",
+    "file_paths = [\"tmp.ttl\", \"tmp.xml\", \"tmp.jsonld\", \"tmp.parquet\"]\n",
     "file_sizes = [os.path.getsize(file_path) for file_path in file_paths]\n",
     "\n",
     "df = pd.DataFrame({\"file_path\": file_paths, \"file_size\": file_sizes, \"write_time\": write_times})\n",
@@ -468,11 +480,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice the relative sizes?\n",
+    "Notice the relative sizes and times?\n",
     "[Parquet](https://parquet.apache.org/) provides for compression in a way that works well with RDF.\n",
-    "The same KG stored as a Parquet file is ~10% the size of the same KG stored as JSON-LD.\n",
+    "The same KG stored as a Parquet file is ~10% the size of the same KG stored as JSON-LD, while XML is big.\n",
     "\n",
-    "Looking at the write times as a function of file size, Parquet has overhead – due to the compression work performed."
+    "Looking at the write times, Parquet is fast and the eponymous Turtle format is human-readable although relatively slow."
    ]
   },
   {
