@@ -6,14 +6,23 @@
    "source": [
     "# SHACL validation with `pySHACL`\n",
     "\n",
-    "Here we'll show use of the [W3 Shapes Constraint Language](https://www.w3.org/TR/shacl/) (SHACL) based on the [`pySHACL`](https://github.com/RDFLib/pySHACL) library.\n",
+    "Let's explore use of the [W3 Shapes Constraint Language](https://www.w3.org/TR/shacl/) (SHACL) based on the [`pySHACL`](https://github.com/RDFLib/pySHACL) library.\n",
     "\n",
-    "To build KGs we use layers:\n",
+    "When we build KGs, it can be helpful to think of the different semantic technologies in terms of layers:\n",
     "\n",
     "  * [SKOS](https://www.w3.org/2001/sw/wiki/SKOS) - *thesauri* and *classification*\n",
     "  * [SHACL](https://www.w3.org/TR/shacl/) - *requirements*\n",
     "  * [OWL](https://www.w3.org/OWL/) - *concepts*\n",
-    "  * [RDF](https://www.w3.org/TR/rdf11-primer/) - *represent nodes, predictates, literals*"
+    "  * [RDF](https://www.w3.org/TR/rdf11-primer/) - *represent nodes, predictates, literals*\n",
+    "  \n",
+    "With SHACL we can *validate* as well as run some forms of inference, to complement what RDF, OWL, etc., provide."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we'll show one of the examples from `pySHACL`, starting with its SHACL *shapes graph* in Turtle format:"
    ]
   },
   {
@@ -22,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shapes_file = \"\"\"\n",
+    "shapes_graph = \"\"\"\n",
     "@prefix sh:     <http://www.w3.org/ns/shacl#> .\n",
     "@prefix xsd:    <http://www.w3.org/2001/XMLSchema#> .\n",
     "@prefix schema: <http://schema.org/> .\n",
@@ -66,12 +75,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then define a simple *data graph* to test against, given in JSON-LD format:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_file = \"\"\"\n",
+    "data_graph = \"\"\"\n",
     "{\n",
     "    \"@context\": { \"@vocab\": \"http://schema.org/\" },\n",
     "    \"@id\": \"http://example.org/ns#Bob\",\n",
@@ -88,6 +104,13 @@
     "    }\n",
     "}\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's run `pySHACL` directly, to test whether this data graph conforms to the shapes graph, then print out the results:"
    ]
   },
   {
@@ -156,8 +179,8 @@
     "import pyshacl\n",
     "\n",
     "results = pyshacl.validate(\n",
-    "    data_file,\n",
-    "    shacl_graph=shapes_file,\n",
+    "    data_graph,\n",
+    "    shacl_graph=shapes_graph,\n",
     "    data_graph_format=\"json-ld\",\n",
     "    shacl_graph_format=\"turtle\",\n",
     "    inference=\"rdfs\",\n",
@@ -176,14 +199,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The birthday value should result in a `LessThanConstraintComponent` violation, and the postalcode value should result in a `NodeConstraintComponent` violation."
+    "The birthday value should cause a `LessThanConstraintComponent` violation, and the postal code value should cause a `NodeConstraintComponent` violation."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---"
+    "---\n",
+    "\n",
+    "## Validating RDF graphs with `kglab`\n",
+    "\n",
+    "Let's try this again, using the `kglab` abstraction layer.\n",
+    "First we'll load our recipe graph:"
    ]
   },
   {
@@ -195,10 +223,10 @@
     "import kglab\n",
     "\n",
     "namespaces = {\n",
-    "    \"wtm\": \"http://purl.org/heals/food/\",\n",
-    "    \"ind\": \"http://purl.org/heals/ingredient/\",\n",
+    "    \"wtm\":  \"http://purl.org/heals/food/\",\n",
+    "    \"ind\":  \"http://purl.org/heals/ingredient/\",\n",
     "    \"skos\": \"https://www.w3.org/2004/02/skos/core#\",\n",
-    "    \"nom\": \"https://github.com/DerwenAI/kglab/wiki/Vocab#\",\n",
+    "    \"nom\":  \"https://github.com/DerwenAI/kglab/wiki/Vocab#\",\n",
     "    }\n",
     "\n",
     "kg = kglab.KnowledgeGraph(\n",
@@ -212,17 +240,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we define a SHACL shape graph to provide *requirements* for our recipes KG:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "shacl = \"\"\"\n",
-    "@prefix sh:  <http://www.w3.org/ns/shacl#> .\n",
-    "@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .\n",
-    "@prefix nom: <https://github.com/DerwenAI/kglab/wiki/Vocab#> .\n",
-    "@prefix wtm: <http://purl.org/heals/food/> .\n",
-    "@prefix ind: <http://purl.org/heals/ingredient/> .\n",
+    "shacl_graph = \"\"\"\n",
+    "@prefix sh:   <http://www.w3.org/ns/shacl#> .\n",
+    "@prefix xsd:  <http://www.w3.org/2001/XMLSchema#> .\n",
+    "@prefix nom:  <https://github.com/DerwenAI/kglab/wiki/Vocab#> .\n",
+    "@prefix wtm:  <http://purl.org/heals/food/> .\n",
+    "@prefix ind:  <http://purl.org/heals/ingredient/> .\n",
     "@prefix skos: <https://www.w3.org/2004/02/skos/core#> .\n",
     "\n",
     "nom:RecipeShape\n",
@@ -242,6 +277,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now run the SHACL validation through `kglab`.\n",
+    "Note that the `shacl_graph` parameter is optional; alternatively the SHACL shape graph could have been included as part of our `nom.ttl` file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -253,14 +296,6 @@
       "Constraint Violation in MaxLengthConstraintComponent (http://www.w3.org/ns/shacl#MaxLengthConstraintComponent):\n",
       "\tSeverity: sh:Violation\n",
       "\tSource Shape: [ sh:datatype xsd:string ; sh:maxLength Literal(\"50\", datatype=xsd:integer) ; sh:path skos:definition ]\n",
-      "\tFocus Node: <https://www.food.com/recipe/137158>\n",
-      "\tValue Node: Literal(\"pikkuleipienperustaikina  finnish butter cookie dough\")\n",
-      "\tResult Path: skos:definition\n",
-      "\tMessage: String length not <= Literal(\"50\", datatype=xsd:integer)\n",
-      "\n",
-      "Constraint Violation in MaxLengthConstraintComponent (http://www.w3.org/ns/shacl#MaxLengthConstraintComponent):\n",
-      "\tSeverity: sh:Violation\n",
-      "\tSource Shape: [ sh:datatype xsd:string ; sh:maxLength Literal(\"50\", datatype=xsd:integer) ; sh:path skos:definition ]\n",
       "\tFocus Node: <https://www.food.com/recipe/61108>\n",
       "\tValue Node: Literal(\"german pancakes  from the mennonite treasury of recipes\")\n",
       "\tResult Path: skos:definition\n",
@@ -277,6 +312,14 @@
       "Constraint Violation in MaxLengthConstraintComponent (http://www.w3.org/ns/shacl#MaxLengthConstraintComponent):\n",
       "\tSeverity: sh:Violation\n",
       "\tSource Shape: [ sh:datatype xsd:string ; sh:maxLength Literal(\"50\", datatype=xsd:integer) ; sh:path skos:definition ]\n",
+      "\tFocus Node: <https://www.food.com/recipe/137158>\n",
+      "\tValue Node: Literal(\"pikkuleipienperustaikina  finnish butter cookie dough\")\n",
+      "\tResult Path: skos:definition\n",
+      "\tMessage: String length not <= Literal(\"50\", datatype=xsd:integer)\n",
+      "\n",
+      "Constraint Violation in MaxLengthConstraintComponent (http://www.w3.org/ns/shacl#MaxLengthConstraintComponent):\n",
+      "\tSeverity: sh:Violation\n",
+      "\tSource Shape: [ sh:datatype xsd:string ; sh:maxLength Literal(\"50\", datatype=xsd:integer) ; sh:path skos:definition ]\n",
       "\tFocus Node: <https://www.food.com/recipe/279314>\n",
       "\tValue Node: Literal(\"choux pastry  for profiteroles  cream puffs or eclairs\")\n",
       "\tResult Path: skos:definition\n",
@@ -286,7 +329,14 @@
     }
    ],
    "source": [
-    "conforms, v_graph, v_text = kg.validate(shacl_graph=shacl)"
+    "conforms, v_graph, v_text = kg.validate(shacl_graph=shacl_graph)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then print the results, which should be approximately what was just printed as violations:"
    ]
   },
   {
@@ -298,18 +348,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "conforms False\n",
-      "graph b'@prefix sh: <http://www.w3.org/ns/shacl#> .\\n@prefix skos: <https://www.w3.org/2004/02/skos/core#> .\\n@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .\\n\\n[] a sh:ValidationReport ;\\n    sh:conforms false ;\\n    sh:result [ a sh:ValidationResult ;\\n            sh:focusNode <https://www.food.com/recipe/61108> ;\\n            sh:resultMessage \"String length not <= Literal(\\\\\"50\\\\\", datatype=xsd:integer)\" ;\\n            sh:resultPath skos:definition ;\\n            sh:resultSeverity sh:Violation ;\\n            sh:sourceConstraintComponent sh:MaxLengthConstraintComponent ;\\n            sh:sourceShape _:ub3bL16C17 ;\\n            sh:value \"german pancakes  from the mennonite treasury of recipes\" ],\\n        [ a sh:ValidationResult ;\\n            sh:focusNode <https://www.food.com/recipe/137158> ;\\n            sh:resultMessage \"String length not <= Literal(\\\\\"50\\\\\", datatype=xsd:integer)\" ;\\n            sh:resultPath skos:definition ;\\n            sh:resultSeverity sh:Violation ;\\n            sh:sourceConstraintComponent sh:MaxLengthConstraintComponent ;\\n            sh:sourceShape _:ub3bL16C17 ;\\n            sh:value \"pikkuleipienperustaikina  finnish butter cookie dough\" ],\\n        [ a sh:ValidationResult ;\\n            sh:focusNode <https://www.food.com/recipe/279314> ;\\n            sh:resultMessage \"String length not <= Literal(\\\\\"50\\\\\", datatype=xsd:integer)\" ;\\n            sh:resultPath skos:definition ;\\n            sh:resultSeverity sh:Violation ;\\n            sh:sourceConstraintComponent sh:MaxLengthConstraintComponent ;\\n            sh:sourceShape _:ub3bL16C17 ;\\n            sh:value \"choux pastry  for profiteroles  cream puffs or eclairs\" ],\\n        [ a sh:ValidationResult ;\\n            sh:focusNode <https://www.food.com/recipe/261361> ;\\n            sh:resultMessage \"String length not <= Literal(\\\\\"50\\\\\", datatype=xsd:integer)\" ;\\n            sh:resultPath skos:definition ;\\n            sh:resultSeverity sh:Violation ;\\n            sh:sourceConstraintComponent sh:MaxLengthConstraintComponent ;\\n            sh:sourceShape _:ub3bL16C17 ;\\n            sh:value \"german dumplings  spaetzle or kniffles  for soup or saute\" ] .\\n\\n_:ub3bL16C17 sh:datatype xsd:string ;\\n    sh:maxLength 50 ;\\n    sh:path skos:definition .\\n\\n'\n",
-      "text Validation Report\n",
+      "conforms: False\n",
+      "\n",
+      "graph: [a rdfg:Graph;rdflib:storage [a rdflib:Store;rdfs:label 'Memory2']].\n",
+      "\n",
+      "text: Validation Report\n",
       "Conforms: False\n",
       "Results (4):\n",
-      "Constraint Violation in MaxLengthConstraintComponent (http://www.w3.org/ns/shacl#MaxLengthConstraintComponent):\n",
-      "\tSeverity: sh:Violation\n",
-      "\tSource Shape: [ sh:datatype xsd:string ; sh:maxLength Literal(\"50\", datatype=xsd:integer) ; sh:path skos:definition ]\n",
-      "\tFocus Node: <https://www.food.com/recipe/137158>\n",
-      "\tValue Node: Literal(\"pikkuleipienperustaikina  finnish butter cookie dough\")\n",
-      "\tResult Path: skos:definition\n",
-      "\tMessage: String length not <= Literal(\"50\", datatype=xsd:integer)\n",
       "Constraint Violation in MaxLengthConstraintComponent (http://www.w3.org/ns/shacl#MaxLengthConstraintComponent):\n",
       "\tSeverity: sh:Violation\n",
       "\tSource Shape: [ sh:datatype xsd:string ; sh:maxLength Literal(\"50\", datatype=xsd:integer) ; sh:path skos:definition ]\n",
@@ -327,6 +372,13 @@
       "Constraint Violation in MaxLengthConstraintComponent (http://www.w3.org/ns/shacl#MaxLengthConstraintComponent):\n",
       "\tSeverity: sh:Violation\n",
       "\tSource Shape: [ sh:datatype xsd:string ; sh:maxLength Literal(\"50\", datatype=xsd:integer) ; sh:path skos:definition ]\n",
+      "\tFocus Node: <https://www.food.com/recipe/137158>\n",
+      "\tValue Node: Literal(\"pikkuleipienperustaikina  finnish butter cookie dough\")\n",
+      "\tResult Path: skos:definition\n",
+      "\tMessage: String length not <= Literal(\"50\", datatype=xsd:integer)\n",
+      "Constraint Violation in MaxLengthConstraintComponent (http://www.w3.org/ns/shacl#MaxLengthConstraintComponent):\n",
+      "\tSeverity: sh:Violation\n",
+      "\tSource Shape: [ sh:datatype xsd:string ; sh:maxLength Literal(\"50\", datatype=xsd:integer) ; sh:path skos:definition ]\n",
       "\tFocus Node: <https://www.food.com/recipe/279314>\n",
       "\tValue Node: Literal(\"choux pastry  for profiteroles  cream puffs or eclairs\")\n",
       "\tResult Path: skos:definition\n",
@@ -336,9 +388,17 @@
     }
    ],
    "source": [
-    "print(\"conforms\", conforms)\n",
-    "print(\"graph\", v_graph)\n",
-    "print(\"text\", v_text)"
+    "print(\"conforms:\", conforms)\n",
+    "print(\"\\ngraph:\", v_graph)\n",
+    "print(\"\\ntext:\", v_text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SHACL provides excellent resources for ensuring data quality when working with KGs.\n",
+    "In addition to validation, SHACL can also be applied for auditing and inference."
    ]
   },
   {
@@ -354,14 +414,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. fix the errors in the ABox graph data of the first example"
+    "**Exercise 1:**\n",
+    "\n",
+    "Fix the errors in the first example by modifying its *data graph*, i.e., its ABox.\n",
+    "Can you get it to a state were the returned flag `conforms == True` ?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  2. how would you validate that each recipe has a cooking time?"
+    "**Exercise 2:**\n",
+    "\n",
+    "Extend the SHACL *shape graph* for our recipe KG to validate that each recipe has a non-zero cooking time?\n",
+    "How large must the maximum cooking time be set to avoid violations?"
    ]
   }
  ],
